--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -1,6 +1,18 @@
 <h1>Projects</h1>
+
+<% if notice %>
+    <div style=
+        "color: white; 
+        background-color: black; 
+        padding:10px; 
+        margin-bottom:10px">
+        <%= notice %>
+    </div>
+<% end %>
+
 <div>
-    <%= link_to "Crear Nuevo" , projects_create_path %>
+    <%= link_to "Crear Nuevo" , projects_new_path %>
+</div>
 <table style="width:100%">
   <tr>
     <th>Nombre</th>
